--- a/_posts/2017-07-28-piter.markdown
+++ b/_posts/2017-07-28-piter.markdown
@@ -9,21 +9,25 @@ images:
   - img_1315.jpg
   - img_1305.jpg
   - img_1307.jpg
-
+  - img_1327.jpg
   - fullsizerender 2.jpg
+  - img_1338.jpg
+  - img_1365.jpg
+
 
 
   
 
-  - img_1327.jpg
-  - img_1338.jpg
+
+
   - img_1356.jpg
-  - img_1365.jpg
+
   - img_1405.jpg
   - img_1408.jpg
   - img_1432.jpg
   - img_1438.jpg
-  - img_1444.jpg
+  - isaac_cath.jpg
+  - img_1488.jpg
   - img_1469.jpg
 
 
@@ -31,7 +35,7 @@ images:
   - img_1477.jpg
   - img_1479.jpg
   - img_1483.jpg
-  - img_1488.jpg
+
   - img_1493.jpg
   - img_1500.jpg
   - img_1515.jpg
@@ -46,14 +50,15 @@ images:
   - img_1580.jpg
   - img_1582.jpg
   - img_1587.jpg
+  - img_1624.jpg
   - img_1589.jpg
   - img_1595.jpg
   - img_1599.jpg
   - img_1603.jpg
   - img_1607.jpg
   - img_1612.jpg
-  - img_1620.jpg
-  - img_1624.jpg
+
+
   - img_1627.jpg
   - img_1655.jpg
   - img_1631.jpg
