--- a/_posts/2017-07-28-piter.markdown
+++ b/_posts/2017-07-28-piter.markdown
@@ -13,32 +13,20 @@ images:
   - fullsizerender 2.jpg
   - img_1338.jpg
   - img_1365.jpg
-
-
-
-  
-
-
-
   - img_1356.jpg
-
   - img_1405.jpg
   - img_1408.jpg
-  - img_1432.jpg
+  - img_1515.jpg
   - img_1438.jpg
-  - isaac_cath.jpg
   - img_1488.jpg
+  - isaac_cath.jpg
   - img_1469.jpg
-
-
   - img_1475.jpg
   - img_1477.jpg
   - img_1479.jpg
   - img_1483.jpg
-
   - img_1493.jpg
   - img_1500.jpg
-  - img_1515.jpg
   - img_1518.jpg
   - img_1525.jpg
   - img_1537.jpg
@@ -57,8 +45,6 @@ images:
   - img_1603.jpg
   - img_1607.jpg
   - img_1612.jpg
-
-
   - img_1627.jpg
   - img_1655.jpg
   - img_1631.jpg
@@ -70,9 +56,9 @@ images:
    
 ---
 
-Я сижу в самолете и пролетаю где-то над Атлантикой. Рядом сидит моя сестренка и впереди нас ждет целый месяц приключений. Женечка едет к нам в гости! И это начало одного путешествия и окончание другого.
+Я сижу в самолете и пролетаю где-то над Атлантикой. Рядом сидит моя сестренка и впереди нас ждет целый месяц приключений. Женечка едет к нам в гости! Это начало одного путешествия и окончание другого.
 
-Я очень хочу поделиться: Я БЫЛА В ПИТЕРЕ! 
+Я БЫЛА В ПИТЕРЕ! 
 
 <!--separate-->
 
@@ -89,7 +75,10 @@ images:
 Мы совершили великолепную поездку в Великий Новгород, катались там на кораблике, ездили на дачу, купались там и гоняли все вместе на велосипедах. Мы гуляли по теплому Питеру, который подарил прекрасную погоду на все время моей поездки, мы встречали закаты.
 Родители меня так радуют. Они молодые и активные, и глаз горит! И от этого я счастлива!
 
-Конечно, очень хотелось встретиться и со всеми друзьями, но времени было мало, а приоритет я отдала родителям. Это было то, чего хотела моя душа. И я надеюсь, что никто не останется в обиде.
+{% include image src="img_1432.jpg" %}
+
+
+Конечно, очень хотелось встретиться и со всеми друзьями, но времени было мало, а приоритет я отдала родителям. Это было то, к чему рвалась моя душа. И я надеюсь, что никто не остался в обиде.
 
 Я улетаю с чувством счастья. Я лечу обратно в дом, который мы с Кириллом вместе построили, где много любви и тепла. Но я, конечно, безумно расстраиваюсь отсутствию возможности взять и вечерком заехать к маме с папой.
 
