--- a/_posts/2017-07-28-piter.markdown
+++ b/_posts/2017-07-28-piter.markdown
@@ -56,7 +56,7 @@ images:
    
 ---
 
-Я сижу в самолете и пролетаю где-то над Атлантикой. Рядом сидит моя сестренка и впереди нас ждет целый месяц приключений. Женечка едет к нам в гости! Это начало одного путешествия и окончание другого.
+Сижу в самолете и пролетаю где-то над Атлантикой. Рядом сидит моя сестренка Женечка и впереди нас ждет целый месяц приключений. Девочки летят в Нью Йорк, а через несколько дней мы отправимся и в Сан Франциско! Это начало одного путешествия и окончание другого.
 
 Я БЫЛА В ПИТЕРЕ! 
 
@@ -67,19 +67,23 @@ images:
 Перелет был не из легких: 22 часа, две пересадки и опоздание одного из рейсов. Но это ничто по сравнению с чувствами, когда ты можешь обнять, прижаться, поцеловать родных, которых ты уже привык видеть в экране.
 
 Много ли вы знаете о расставаниях? Уверена, что многие из вас знают больше, чем я могла бы представить и все мои переживания покажутся лишь шуткой. 
-Всего каких-то 15-20 лет назад люди, уезжающие заграницу не имели никакой возможности связаться с родными и как-то с этим жили и даже были счастливы. 
+Всего каких-то 15-20 лет назад люди, уезжающие заграницу не имели никакой возможности связаться с родными и как-то с этим жили, и даже были счастливы. 
 
 Мы же, привыкли, что можем звонить и даже видеть друг друга без особых затрат. Но этого так мало! Так нехватает!
 
-За последние две недели мне удалось провести очень много времени с родителями и поменьше с друзьями. И я безумно счастлива от этого. 
-Мы совершили великолепную поездку в Великий Новгород, катались там на кораблике, ездили на дачу, купались там и гоняли все вместе на велосипедах. Мы гуляли по теплому Питеру, который подарил прекрасную погоду на все время моей поездки, мы встречали закаты.
-Родители меня так радуют. Они молодые и активные, и глаз горит! И от этого я счастлива!
+Это были потрясающие каникулы!
+
+За последние две недели я провела очень много времени с родителями и поменьше с друзьями. И я безумно счастлива.
+
+Мы совершили великолепную поездку в Великий Новгород, катались там на кораблике, ездили на дачу, купались там и гоняли все вместе на велосипедах. 
+Мы гуляли по теплому Питеру, который подарил прекрасную погоду на все время моей поездки, мы встречали закаты.
+Родители меня так радуют. Они молодые и активные, и глаз горит! И в этом счастье!
 
 {% include image src="img_1432.jpg" %}
 
 
 Конечно, очень хотелось встретиться и со всеми друзьями, но времени было мало, а приоритет я отдала родителям. Это было то, к чему рвалась моя душа. И я надеюсь, что никто не остался в обиде.
 
-Я улетаю с чувством счастья. Я лечу обратно в дом, который мы с Кириллом вместе построили, где много любви и тепла. Но я, конечно, безумно расстраиваюсь отсутствию возможности взять и вечерком заехать к маме с папой.
+Я улетаю с радостью от того, как прекрасно мы провели время и сколько всего еще нам предстоит! Лечу обратно в дом, который мы с Кириллом вместе построили, где много любви и тепла. Но так хотелось бы взять и вечерком заехать к маме с папой.
 
 
