--- a/_posts/2017-07-28-piter.markdown
+++ b/_posts/2017-07-28-piter.markdown
@@ -62,28 +62,6 @@ images:
 
 <!--separate-->
 
-Я ехала к родителям. Уезжала из нового дома и летела в свой родной дом. Чувство дома потеряно окончательно! 
+Спасибо родным и близким за душевные встречи, а Питеру за солнце и тепло, которое он дарит не так часто.
 
-Перелет был не из легких: 22 часа, две пересадки и опоздание одного из рейсов. Но это ничто по сравнению с чувствами, когда ты можешь обнять, прижаться, поцеловать родных, которых ты уже привык видеть в экране.
-
-Много ли вы знаете о расставаниях? Уверена, что многие из вас знают больше, чем я могла бы представить и все мои переживания покажутся лишь шуткой. 
-Всего каких-то 15-20 лет назад люди, уезжающие заграницу не имели никакой возможности связаться с родными и как-то с этим жили, и даже были счастливы. 
-
-Мы же, привыкли, что можем звонить и даже видеть друг друга без особых затрат. Но этого так мало! Так нехватает!
-
-Это были потрясающие каникулы!
-
-За последние две недели я провела очень много времени с родителями и поменьше с друзьями. И я безумно счастлива.
-
-Мы совершили великолепную поездку в Великий Новгород, катались там на кораблике, ездили на дачу, купались там и гоняли все вместе на велосипедах. 
-Мы гуляли по теплому Питеру, который подарил прекрасную погоду на все время моей поездки, мы встречали закаты.
-Родители меня так радуют. Они молодые и активные, и глаз горит! И в этом счастье!
-
-{% include image src="img_1432.jpg" %}
-
-
-Конечно, очень хотелось встретиться и со всеми друзьями, но времени было мало, а приоритет я отдала родителям. Это было то, к чему рвалась моя душа. И я надеюсь, что никто не остался в обиде.
-
-Я улетаю с радостью от того, как прекрасно мы провели время и сколько всего еще нам предстоит! Лечу обратно в дом, который мы с Кириллом вместе построили, где много любви и тепла. Но так хотелось бы взять и вечерком заехать к маме с папой.
-
-
+Я лечу домой, к Любимому, а вам оставляю фотографии о своей поездке.
