--- a/_posts/2017-07-28-piter.markdown
+++ b/_posts/2017-07-28-piter.markdown
@@ -3,6 +3,7 @@ layout: post
 title: Дом там, где мы есть.
 date: 2017-07-28 00:25:24 -0800
 comments: true
+hidden: true
 original-date: 2017-07-28
 thumbnail: thumbnail-piter.jpg
 images:
