--- a/_posts/2017-09-05-piter.markdown
+++ b/_posts/2017-09-05-piter.markdown
@@ -57,16 +57,16 @@ images:
    
 ---
 
-Я сидела в самолете и пролетала где-то над Атлантикой. Рядом сидела моя сестренка Женечка и впереди нас ждал целый месяц приключений. Мы летели в Нью Йорк, а через несколько дней мы отправлялись в Сан Франциско! Это было начало одного путешествия и окончание другого.
+Я сидела в самолете и пролетала где-то над Атлантикой. Рядом была моя сестренка Женечка и впереди нас ждал целый месяц приключений. Мы летели в Нью Йорк, а через несколько дней мы отправлялись в Сан Франциско! Это было начало одного путешествия и окончание другого.
 
 МЫ ЛЕТЕЛИ ИЗ ПИТЕРА! 
 
 <!--separate-->
 
 
-Я ездила к родителям. Уезжала из нового дома и летела в другой. Чувство дома потеряно окончательно! 
+Я ездила к родителям. Уезжала из нового дома и летела в родительский. Чувство дома потеряно окончательно! 
 
-Перелет на Родину был не из легких: 22 часа, две пересадки и опоздание одного из рейсов. Но это ничто по сравнению с чувствами, когда ты можешь обнять, прижаться, поцеловать родных, которых ты уже привык видеть в экране.
+Перелет на Родину был не из легких: 22 часа, две пересадки и опоздание одного из рейсов. Но это ничто по сравнению с чувствами, когда ты можешь обнять, поцеловать и прижаться к родным! Последний шесть месяцев они для меня были в экране компьютера.
 
 Много ли вы знаете о расставаниях? Уверена, что многие из вас знают больше, чем я могла бы представить и все мои переживания покажутся лишь шуткой. 
 Всего каких-то 15-20 лет назад люди, уезжающие заграницу не имели никакой возможности связаться с родными и как-то с этим жили, и даже были счастливы. 
@@ -77,15 +77,19 @@ images:
 
 Мы совершили великолепную поездку в Великий Новгород, катались там на кораблике, ездили на дачу, купались и гоняли все вместе на велосипедах. 
 
-Мы гуляли по теплому Питеру, который подарил прекрасную погоду на все время моей поездки, мы встречали закаты.
+Мы гуляли по теплому Питеру, который подарил прекрасную погоду на все время моей поездки. Встречали закаты.
+
 Родители меня так радуют. Они молодые и активные, и глаз горит! И в этом счастье!
 
 {% include image src="img_1432.jpg" %}
 
 
-Конечно, очень хотелось встретиться и со всеми друзьями, но времени было мало, а приоритет я отдала родителям. Это было то, к чему рвалась моя душа. И я надеюсь, что никто не остался в обиде.
+Конечно, очень хотелось бы встретиться и со всеми друзьями, но времени было мало. А приоритет я отдала родителям. Это было то, к чему рвалась моя душа. И я надеюсь, что никто не остался в обиде.
 
-Я летела с радостью от того, как прекрасно мы провели время и сколько всего еще нам предстоит! Лечу обратно в дом, который мы с Кириллом вместе построили, где много любви и тепла. Но так хотелось бы взять и вечерком заехать к маме с папой.
+Я летела в Америку с радостью от того, как прекрасно мы провели время и сколько всего еще нам предстоит! 
+Лечу обратно в дом, который мы с Кириллом вместе построили, где много любви и тепла. 
 
-Спасибо родным и близким за душевные встречи невероятное тепло, а Питеру за солнце , которое он дарит не так часто.
+Но так хотелось бы взять и вечерком заехать к маме с папой.
+
+Спасибо родным и близким за душевные встречи и невероятное тепло. А Питеру за солнце, которое он дарит не так часто.
 
