--- a/_posts/2017-09-05-piter.markdown
+++ b/_posts/2017-09-05-piter.markdown
@@ -57,21 +57,23 @@ images:
    
 ---
 
-Я сидела в самолете и пролетала где-то над Атлантикой. Рядом была моя сестренка Женечка и впереди нас ждал целый месяц приключений. Мы летели в Нью Йорк, а через несколько дней мы отправлялись в Сан Франциско! Это было начало одного путешествия и окончание другого.
+Я сидела в самолете и пролетала где-то над Атлантикой. Рядом была моя сестренка Женечка и впереди нас ждал целый месяц приключений. Мы летели в Нью Йорк, а через несколько дней и в Сан Франциско! Это было начало одного путешествия и окончание другого.
 
 МЫ ЛЕТЕЛИ ИЗ ПИТЕРА! 
 
 <!--separate-->
 
 
-Я ездила к родителям. Уезжала из нового дома и летела в родительский. Чувство дома потеряно окончательно! 
+Я ездила к родителям. И об этой поездке я хочу сегодня рассказать.
 
-Перелет на Родину был не из легких: 22 часа, две пересадки и опоздание одного из рейсов. Но это ничто по сравнению с чувствами, когда ты можешь обнять, поцеловать и прижаться к родным! Последний шесть месяцев они для меня были в экране компьютера.
+Когда я летела из Сан Франциско, я уезжала из нового дома и летела в родительский. Чувство дома потеряно окончательно! 
 
-Много ли вы знаете о расставаниях? Уверена, что многие из вас знают больше, чем я могла бы представить и все мои переживания покажутся лишь шуткой. 
-Всего каких-то 15-20 лет назад люди, уезжающие заграницу не имели никакой возможности связаться с родными и как-то с этим жили, и даже были счастливы. 
+Перелет на Родину был не из легких: 22 часа, две пересадки и опоздание одного из рейсов. Но это ничто по сравнению с чувствами, когда ты можешь обнять, поцеловать и прижаться к родным! Ведь последние шесть месяцев они были в экране компьютера.
 
-Мы же, привыкли, что можем звонить и даже видеть друг друга без особых затрат. Но этого так мало! Так нехватает!
+Много ли вы знаете о расставаниях? Уверена, что многие знают больше, чем я могла бы представить и все мои переживания покажутся лишь шуткой. 
+Всего каких-то 15-20 лет назад люди, уезжающие заграницу не имели никакой возможности связаться с родными и с этим жили, и даже были счастливы. 
+
+Мы же, привыкли, что можем звонить и даже видеть друг друга без особых сложностей. Но этого так мало! Так нехватает!
 
 Это были потрясающие каникулы! Я провела очень много времени с родителями.
 
@@ -79,14 +81,14 @@ images:
 
 Мы гуляли по теплому Питеру, который подарил прекрасную погоду на все время моей поездки. Встречали закаты.
 
-Родители меня так радуют. Они молодые и активные, и глаз горит! И в этом счастье!
+Родители так радуют. Они молодые и активные, и глаз горит! И в этом счастье!
 
 {% include image src="img_1432.jpg" %}
 
 
 Конечно, очень хотелось бы встретиться и со всеми друзьями, но времени было мало. А приоритет я отдала родителям. Это было то, к чему рвалась моя душа. И я надеюсь, что никто не остался в обиде.
 
-Я летела в Америку с радостью от того, как прекрасно мы провели время и сколько всего еще нам предстоит! 
+Я летела в Америку с радостью от того, как чудесно мы провели время и сколько всего еще нам предстоит! 
 Лечу обратно в дом, который мы с Кириллом вместе построили, где много любви и тепла. 
 
 Но так хотелось бы взять и вечерком заехать к маме с папой.
