--- a/_posts/stories/2017-09-05-piter.markdown
+++ b/_posts/stories/2017-09-05-piter.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Дом там, где мы есть.
+title: Дом там, где мы есть
 date: 2017-09-05 00:25:24 -0800
 comments: true
 original-date: 2017-07-28
