change thumbnails for cooking

--- a/_posts/cooking/2017-10-16-sushi.markdown
+++ b/_posts/cooking/2017-10-16-sushi.markdown
@@ -5,6 +5,7 @@ categories: cooking
 hidden: true
 date: 2017-10-16 07:25:24 -0800
 comments: true 
+thumbnail: IMG_3465.JPG
 ---
 
 Если вы не едите рыбу, а суши страсть как захотелось, то не отчаивайтесь. Ниже я предлагаю рецепт, который ничуть не уступит классике! Так что хватайте рис и поехали!
