added thumbnail photos for cooking

--- a/_posts/cooking/2017-07-11-raw-bars.markdown
+++ b/_posts/cooking/2017-07-11-raw-bars.markdown
@@ -5,6 +5,7 @@ categories: cooking
 hidden: true
 date: 2017-07-11 07:25:24 -0800
 comments: true 
+thumbnail: bars.jpg
 ---
 
 Все, кто пробовал, в восторге! Очень вкусно, питательно и удобно носить с собой. Ниже я опишу только пример рецепта. Обычно я все делаю "на глаз". Приготовив, такие батончики однажды, вы сможете экспериментировать и придумывать новые вкусы и сочетания.
