resize image in 2017-03-31-friends

--- a/_posts/stories/2017-03-31-friends.markdown
+++ b/_posts/stories/2017-03-31-friends.markdown
@@ -28,5 +28,5 @@ thumbnail: 2017-03-11_14-56-40_993.jpg
 В Питере уже практически суббота, так что я желаю вам прекрасных выходных!
 А своими впечатлениями и фотографиями я обязательно поделюсь в понедельник =)
 
-![Golden Gate](/assets/images/posts/stories/2017-03-31-friends/2017-03-11_14-56-40_993.jpg)
+{% include image src="2017-03-11_14-56-40_993.jpg" title="Golden Gate" %}
 
