--- a/_posts/stories/2017-11-08-yosemite.markdown
+++ b/_posts/stories/2017-11-08-yosemite.markdown
@@ -7,16 +7,68 @@ comments: true
 thumbnail:
 images:
 ---
-В Америке 59 Национальных парков. Восемь из них расположены в Калифорнии. В один из этих парков мы и отправились в сентябре.
-Йосемите - один из первых парков в Америке, получивших звание Национального! И, пожалуй, он самый известный в окрестностях Сан Франциско.
+В Америке 59 Национальных парков. Восемь из них расположены в Калифорнии. Самым известным из них является парк, находящийся в 240 километрах от Сан Франциско.
+Его площадь больше 3000 км2, в нём около 1200 километров пешеходных троп, 560 километров автомобильных дорог, 1400 видов растений и 300 видов животных.
+Это - Йосемите!
+В него мы и отправились в одни из сентябрьских выходных!
 
+И да, не бойтесь читать дальше. Так много цифр больше не будет!
 <!--separate--> 
 
+150 миль от Сан Франциско
 
- которого больше 3000 км2.
+
+
+ высота от 2000 до 13 000 feet
+ 1400 растений
+ 300 видов животных
+
+
+высота варьируется от 600 до 3900 метров над уровнем моря,
+
+
+ Джон Мур посетивший долину в 1868 году изучал  Yosemite Valley and the High Sierra и обнаружил что из за ледников йорсемите получилосо его сегодняшнюю форму
+реки и ледняки скульптурировали landscape
+
+В результате эрозии различных горных пород, испытавших тектоническое поднятие и сопутствующих этому разломов, появились долины, каньоны, куполовидные складки и другие формы рельефа, которые мы можем наблюдать сегодня (эти сочленения и трещины не двигаются, поэтому нет геологического разлома)
+
+
+олина Йосемите занимает только один процент от общей территории парка, но именно туда стекается большинство посетителей.
+
+водопады
+водоемы
+ледники
+
+До того, как на этой территории появились первые европейцы, здесь жили индейские племена сьерра-мивок и паюты. Ко времени прихода сюда первых поселенцев, в долине Йосемити обитала группа индейцев, называвшие себя аваничи (Ahwahnechee)
+
+В результате резкого увеличения потока иммигрантов во времена золотой лихорадки стали возникать вооружённые конфликты с местными племенами.
+
+Несколько видных людей, включая Галена Кларка и сенатора Джона Коннесса (англ. John Conness), заинтересовались коммерческим успехом туристического бизнеса и выступили с идеей создания общественного парка на территории долины. 30 июня 1864 года президент США Авраам Линкольн подписал до этого одобренный Конгрессом документ, названный Йосемитским грантом. Долина Йосемити и роща Марипоса были переданы Калифорнии, им был предоставлен статус парка штата, а спустя два года была назначено правление специальных уполномоченных.
+
+ Мьюр был одним их первых, кто предположил, что основные ландшафты парка созданы с помощью огромных ледников,
+
+Чрезмерный выпас скота на пастбищах (в основном овец), вырубка деревьев секвойядендрон и другая деятельность в ущерб природе вынудили Джона Мьюра выступить с идеей ужесточения условий охраны этой территории. Мьюр убеждал влиятельных посетителей в необходимости федеральной защиты парка. Одним из таких посетителей стал издатель журнала «Сенчури Мэгезин» Роберт Джонсон (англ. Robert Underwood Johnson). С помощью Джонсона Мьюр помог провести акт Конгресса, который 1 октября 1890 года дал парку статус национального. Несмотря на это, штат Калифорния всё же сохранил контроль над долиной и рощей. Мьюр также убедил местные власти не пасти скот в альпийских лугах.
+
+
+ By the end of the Cretaceous Period, about 65 million years
+ago, the granitic core was exposed due to deep erosion that removed the overlying
+sedimentary rock and fbrmed a landscape of gentle rolling hills. About 25 million years
+ago, this lowland area began to uplifi and tilt toward the southwest. As the Sierra rose,
+the streams fbllowing into Califomia's Central Valley flowed faster and cut deep Vshaped
+canyons into the mountains.
+T'he first Ice Age began about two million years ago. Glaciers that tbrmed in the High
+Sierra moved through Yosemite Valley.
+
+Yosemite Valley was home to the Miwok Indians who fbr 8,000 years migrated fiom the
+Sierra foothills to the Valley and to the alpine meadows in the summer months. They
+called themselves the "Ahwahneechee," the people who lived in "Ahwahnee.
+
 
 
 <!--{% include image src="" %}-->
+
+
+В 1984 году парк получил статус «Всемирного наследия» под эгидой ЮНЕСКО. Был с самого начала задуман именно как национальный парк (хотя национальные парки существовали и ранее). Среди его организаторов — один из первых защитников идеи заповедников Джон Мьюр (англ. John Muir). Каждый год парк посещают 4—5 миллионов человек; большинство останавливается только в долине Йосемите.
 
 
 Yosemite is internationally recognized for its granite cliffs, waterfalls, clear streams, giant sequoia groves, lakes, mountains, glaciers, and biological diversity.[7] Almost 95% of the park is designated wilderness.[8]
