--- a/_posts/stories/2017-11-08-yosemite.markdown
+++ b/_posts/stories/2017-11-08-yosemite.markdown
@@ -7,24 +7,31 @@ comments: true
 thumbnail:
 images:
 ---
-В Америке 59 Национальных парков. Восемь из них расположены в Калифорнии. Самым известным из них является парк, находящийся в 240 километрах от Сан Франциско.
-Его площадь больше 3000 км2, в нём около 1200 километров пешеходных троп, 560 километров автомобильных дорог, 1400 видов растений и 300 видов животных.
-Это - Йосемите!
-В него мы и отправились в одни из сентябрьских выходных!
+Из пятидесяти девяти Американских Национальных парков, восемь расположены в Калифорнии.
 
-И да, не бойтесь читать дальше. Так много цифр больше не будет!
+Самым известным из них является парк, площадь которого больше 3000 км², в нём около 1200 километров пешеходных троп, 560 километров автомобильных дорог, 1400 видов растений и 300 видов животных.
+Это всё - Йосемите!
+
+В него мы и отправились в одни из сентябрьских выходных!
+<!-- И да, не бойтесь читать дальше. Так много цифр больше не будет! -->
 <!--separate--> 
 
-150 миль от Сан Франциско
+Стоит заметить, что к этой поездке мы начали готовиться практически сразу после нашего переезда. Ну как готовиться? Морально!
+Мы знали, что Йосемите - обязательное место для посещения, что он потрясает и нам обязательно туда надо поехать. Также мы знали, что главное занятие там - это хайкинг.
+Я долго искала, как же по-русски перевести это загадочное слово, пока на помощь не пришла Википедия. Внимание, оказывается хайкинг - это пешеходный туризм. Вот так всё просто.
 
 
+
+Йосемите - э
+
+находящийся в 240 километрах от Сан Франциско.
 
  высота от 2000 до 13 000 feet
- 1400 растений
- 300 видов животных
-
-
 высота варьируется от 600 до 3900 метров над уровнем моря,
+3.5 миллиона туристов ежегодно
+
+Напомню, что хайкинг (все-таки давайте я буду называть его так) - это национальное развлечение в Америке.
+
 
 
  Джон Мур посетивший долину в 1868 году изучал  Yosemite Valley and the High Sierra и обнаружил что из за ледников йорсемите получилосо его сегодняшнюю форму
