--- a/_posts/stories/2017-11-08-yosemite.markdown
+++ b/_posts/stories/2017-11-08-yosemite.markdown
@@ -19,6 +19,12 @@ images:
 Стоит заметить, что к этой поездке мы начали готовиться практически сразу после нашего переезда. Ну как готовиться? Морально!
 Мы знали, что Йосемите - обязательное место для посещения, что он потрясает и нам обязательно туда надо поехать. Также мы знали, что главное занятие там - это хайкинг.
 Я долго искала, как же по-русски перевести это загадочное слово, пока на помощь не пришла Википедия. Внимание, оказывается хайкинг - это пешеходный туризм. Вот так всё просто.
+Таким образом, поездка в наш первый Национальный парк обещала быть активной.
+
+Когда к нам приехала Даша, которая совсем недавно пробежала свой первый марафон, мы поняли, что лучше момента не будет. Надо брать Дашу и ехать. Так мы и сделали.
+
+Мы выехали с вечера. До Йосемите ехать 260 километров. Покинув дом около 6 7 вечера, к ночи мы были в гостинице. Мы остановились в Yosemite Cedar Lodge. Эта гостиница/мотель находится всего в 15 минутах езды до въезда в парк, но не на его территории. Дело в том, что на территории парка останавливаться не только безумно дорого, но еще и очень сложно. Гостиницу необходимо бронировать ооочень заранее.
+
 
 
 
