--- a/_posts/stories/2017-11-08-yosemite.markdown
+++ b/_posts/stories/2017-11-08-yosemite.markdown
@@ -23,7 +23,9 @@ images:
 
 Когда к нам приехала Даша, которая совсем недавно пробежала свой первый марафон, мы поняли, что лучше момента не будет. Надо брать Дашу и ехать. Так мы и сделали.
 
-Мы выехали с вечера. До Йосемите ехать 260 километров. Покинув дом около 6 7 вечера, к ночи мы были в гостинице. Мы остановились в Yosemite Cedar Lodge. Эта гостиница/мотель находится всего в 15 минутах езды до въезда в парк, но не на его территории. Дело в том, что на территории парка останавливаться не только безумно дорого, но еще и очень сложно. Гостиницу необходимо бронировать ооочень заранее.
+Мы выехали в пятницу в 7 вечера. Ехать было около 260 километров, и к ночи мы были в гостинице. Мы остановились в Yosemite Cedar Lodge. Эта гостиница/мотель находится всего в 15 минутах езды до въезда в парк. Дело в том, что на территории парка останавливаться не только безумно дорого, но еще и очень сложно: гостиницу необходимо бронировать ооочень заранее.
+
+Выйдя из машины, мы услышали журчание реки Merced River. Небо было просто усыпано звездами. Температура тоже отличалась от привычной нам. Вечером в Yosemite холодает до 4°C.
 
 
 
