--- a/_posts/stories/2017-05-01-guests.markdown
+++ b/_posts/stories/2017-05-01-guests.markdown
@@ -81,12 +81,12 @@ images:
   * провели время на **Ocean beach** - самом большом пляже в города
   * соседствующий с пляжем- **Golden Gate park** тоже достоин внимания
   * прокатились на старинном рельсовом трамвайчике - **Cable car** (возьмите меня с собой, ведь я этого пока так и не сделала)
-  * если вам интересно посмотреть на одну из самых зашищенных тюрем - то съездите на **Alcatras**. приятным преимуществом будет прогулка на кораблике. Но имейте в виду, что билет надо покупать Online и заранее
+  * если вам интересно посмотреть на одну из самых защищенных тюрем - то съездите на **Alcatras**. приятным преимуществом будет прогулка на кораблике. Но имейте в виду, что билет надо покупать Online и заранее
   * если все-таки тюрьма вам не интересует - покатайтесь на кораблике по заливу: от моста Golden Gate и до Bay Bridge
   * съездите на одну из самых высоких точек города - **Twin peaks**
   * прогуляйтесь по **SOMA** (южный район города), посмотрите на **AT&T** стадион и перекусите в нашем любимом кафе <a target="_blank" href="https://www.google.com/maps/place/Crossroads+Cafe/@37.7831518,-122.3912285,17z/data=!3m1!4b1!4m5!3m4!1s0x8085807795fba00f:0xa591cf34d8738ba4!8m2!3d37.7831518!4d-122.3890398">**Crossroads**</a>
 
-<!-- Я создала карту, на которой отметила все места, упомянутые в моем рассказе. Вы также можете ее открыть на весь экран по <a target="_blank" href="https://www.google.com/maps/d/viewer?mid=1dgzTXwiiYsns07zyI8LNPyqORUg&ll=37.809919151672666%2C-122.4411811&z=12"> этой ссылке</a>.
+Я создала карту, на которой отметила все места, упомянутые в моем рассказе. Вы также можете ее открыть на весь экран по <a target="_blank" href="https://www.google.com/maps/d/viewer?mid=1dgzTXwiiYsns07zyI8LNPyqORUg&ll=37.809919151672666%2C-122.4411811&z=12"> этой ссылке</a>.
 И конечно же фотографии ниже! Жду вас в гости!
 
-  <iframe class="page-content" src="https://www.google.com/maps/d/embed?mid=1dgzTXwiiYsns07zyI8LNPyqORUg" height="380"></iframe> -->
+ <iframe src="https://www.google.com/maps/d/embed?mid=1dgzTXwiiYsns07zyI8LNPyqORUg" width="100%" height="380"></iframe>
