--- a/_posts/stories/2017-11-08-yosemite.markdown
+++ b/_posts/stories/2017-11-08-yosemite.markdown
@@ -17,22 +17,22 @@ images:
 <!--separate--> 
 
 Стоит заметить, что к этой поездке мы начали готовиться практически сразу после нашего переезда. Ну как готовиться? Морально!
-Мы знали, что Йосемите - обязательное место для посещения, что он потрясает и нам обязательно туда надо поехать. Также мы знали, что главное занятие там - это хайкинг.
+Мы знали, что Йосемите - обязательное место для посещения, что он потрясает, и нам обязательно туда надо съездить. Также мы знали, что главное занятие в нем - это хайкинг.
 Я долго искала, как же по-русски перевести это загадочное слово, пока на помощь не пришла Википедия. Внимание, оказывается хайкинг - это пешеходный туризм. Вот так всё просто.
 Таким образом, поездка в наш первый Национальный парк обещала быть активной.
 
 Когда к нам приехала Даша, которая совсем недавно пробежала свой первый марафон, мы поняли, что лучше момента не будет. Надо брать Дашу и ехать. Так мы и сделали.
 
-Мы выехали в пятницу в 7 вечера. Ехать было около 260 километров, и к ночи мы были в гостинице. Мы остановились в Yosemite Cedar Lodge. Эта гостиница/мотель находится всего в 15 минутах езды до въезда в парк. Дело в том, что на территории парка останавливаться не только безумно дорого, но еще и очень сложно: гостиницу необходимо бронировать ооочень заранее.
+Мы выехали в пятницу в 7 вечера. Ехать было около 260 километров, и к ночи мы были в гостинице. Мы остановились в Yosemite Cedar Lodge. Эта гостиница/мотель находится всего в 15 минутах езды до въезда в парк. На территории парка останавливаться не только безумно дорого, но еще и очень сложно: гостиницу необходимо бронировать ооочень заранее.
 
-Выйдя из машины, мы услышали журчание реки Merced River. Небо было просто усыпано звездами. Температура тоже отличалась от привычной нам. Вечером в Yosemite холодает до 4°C.
+Приехали мы затемно. Выйдя из машины, мы услышали журчание реки Merced River. Небо было просто усыпано звездами и слышно было сверчков. Температура тоже отличалась от привычной. Днем в Сан Франциско было около 25°C, а вечером в Yosemite 4°C. Но воздух! Воздух совершенно другой. Я совсем не жалуюсь на воздух в городе, но в Yosemite, сразу чувствуешь, что ты в горах! Хотелось просто постоять и подышать полной грудью.
+
+Во время регистрации в гостинице мы обнаружили еще одну особенность: интернет в гостинице платный. А все это потому, что мобильная сеть там в принципе не ловит, так что о интернете речи и не могло быть. К этому мы были не готовы. Карты заранее не загрузили, родителей не предупредили. =) Так что будущие туристы - имейте в виду! Предупрежден - значит вооружен!
 
 
 
 
-Йосемите - э
 
-находящийся в 240 километрах от Сан Франциско.
 
  высота от 2000 до 13 000 feet
 высота варьируется от 600 до 3900 метров над уровнем моря,
