--- a/_posts/stories/2017-11-08-yosemite.markdown
+++ b/_posts/stories/2017-11-08-yosemite.markdown
@@ -29,9 +29,16 @@ images:
 
 Во время регистрации в гостинице мы обнаружили еще одну особенность: интернет в гостинице платный. А все это потому, что мобильная сеть там в принципе не ловит, так что о интернете речи и не могло быть. К этому мы были не готовы. Карты заранее не загрузили, родителей не предупредили. =) Так что будущие туристы - имейте в виду! Предупрежден - значит вооружен!
 
+На следующее утро мы постарались выехать рано, но на въезде в парк (Arch Rock Entrance) нас все-равно ждала очередь. Двигалась она довольно быстро, но лишний раз напомнила как американцы любят "пешеходный туризм".
+
+Выше я упоминала невероятные размеры Национального парка. Однако, Долина Йосемите занимает только один процент от общей территории парка, но именно туда стекается большинство посетителей. И мы оказались в их числе.
+
+Дело в том, что на этом одном проценте территории расположилось такое количество гор, водопадов и водоемов, что и их нам хватило на два дня с запасом.
+
+Если немного углубиться в историю, то считается, что долина была осво
 
 
-
+ osemite Valley has been inhabited for nearly 3,000 years, though humans may have first visited the area as long as 8,000 to 10,000 years ago.[12
 
 
  высота от 2000 до 13 000 feet
@@ -48,7 +55,7 @@ images:
 В результате эрозии различных горных пород, испытавших тектоническое поднятие и сопутствующих этому разломов, появились долины, каньоны, куполовидные складки и другие формы рельефа, которые мы можем наблюдать сегодня (эти сочленения и трещины не двигаются, поэтому нет геологического разлома)
 
 
-олина Йосемите занимает только один процент от общей территории парка, но именно туда стекается большинство посетителей.
+
 
 водопады
 водоемы
@@ -92,7 +99,7 @@ Yosemite was central to the development of the national park idea. First, Galen 
 Yosemite is one of the largest and least fragmented habitat blocks in the Sierra Nevada, and the park supports a diversity of plants and animals. The park has an elevation range from 2,127 to 13,114 feet (648 to 3,997 m) and contains five major vegetation zones: chaparral/oak woodland, lower montane forest, upper montane forest, subalpine zone, and alpine. Of California's 7,000 plant species, about 50% occur in the Sierra Nevada and more than 20% within Yosemite. There is suitable habitat for more than 160 rare plants in the park, with rare local geologic formations and unique soils characterizing the restricted ranges many of these plants occupy.[7]
 
 
-osemite Valley has been inhabited for nearly 3,000 years, though humans may have first visited the area as long as 8,000 to 10,000 years ago.[12
+
 
 
 The California Gold Rush in the mid-19th century dramatically increased travel by European-Americans in the area, causing competition for resources between the regional Paiute and Miwok and the miners and hangers on.
