--- a/_posts/stories/2017-11-08-yosemite.markdown
+++ b/_posts/stories/2017-11-08-yosemite.markdown
@@ -29,16 +29,22 @@ images:
 
 Во время регистрации в гостинице мы обнаружили еще одну особенность: интернет в гостинице платный. А все это потому, что мобильная сеть там в принципе не ловит, так что о интернете речи и не могло быть. К этому мы были не готовы. Карты заранее не загрузили, родителей не предупредили. =) Так что будущие туристы - имейте в виду! Предупрежден - значит вооружен!
 
-На следующее утро мы постарались выехать рано, но на въезде в парк (Arch Rock Entrance) нас все-равно ждала очередь. Двигалась она довольно быстро, но лишний раз напомнила как американцы любят "пешеходный туризм".
+На следующее утро мы постарались выехать рано. На въезде в парк (Arch Rock Entrance) нас все-равно ждала очередь. Двигалась она довольно быстро, но лишний раз напомнила как американцы любят "пешеходный туризм".
 
-Выше я упоминала невероятные размеры Национального парка. Однако, Долина Йосемите занимает только один процент от общей территории парка, но именно туда стекается большинство посетителей. И мы оказались в их числе.
+Выше я упоминала невероятные размеры Национального парка. Однако, Долина Йосемите занимает только один процент от общей территории всего Йосемите. Но именно туда стекается большинство посетителей. И мы оказались в их числе.
 
-Дело в том, что на этом одном проценте территории расположилось такое количество гор, водопадов и водоемов, что и их нам хватило на два дня с запасом.
+На этом одном проценте территории расположилось такое количество гор, водопадов и водоемов, что и их нам хватило на два дня с запасом.
 
-Если немного углубиться в историю, то считается, что долина была осво
+Если немного углубиться в историю, то считается, что первые живые существа появились здесь около 3000 лет назад. А первые люди - от 8000 до 10000 лет назад.
+До того, как на этой территории появились первые европейцы, здесь жили индейские племена сьерра-мивок и паюты. Ко времени прихода сюда первых поселенцев, в долине Йосемити обитала группа индейцев, называвшая себя аваничи (Ahwahnechee)
+
+Только в 1984 году парк получил статус «Всемирного наследия» под эгидой ЮНЕСКО. С самого начала он был задуман именно как национальный парк. Среди его организаторов — один из первых защитников идеи заповедников Джон Мьюр. Чрезмерный выпас скота на пастбищах вырубка деревьев Секвой и другая деятельность в ущерб природе вынудили Джона Мьюра выступить с идеей ужесточения условий охраны этой территории. 1 октября 1890 года Конгресс дал парку статус национального. Мьюр также убедил местные власти не пасти скот в альпийских лугах.
+
+Считается, что в результате эрозии различных горных пород, испытавших тектоническое поднятие и сопутствующих этому разломов, и появились долины, каньоны, куполовидные складки и другие формы рельефа Yosemite.
+
+Оказавшись в парке в начале десятого, мы поехали по Southside Dr. и практически сразу видели гору El Capitan.
 
 
- osemite Valley has been inhabited for nearly 3,000 years, though humans may have first visited the area as long as 8,000 to 10,000 years ago.[12
 
 
  высота от 2000 до 13 000 feet
@@ -49,27 +55,10 @@ images:
 
 
 
- Джон Мур посетивший долину в 1868 году изучал  Yosemite Valley and the High Sierra и обнаружил что из за ледников йорсемите получилосо его сегодняшнюю форму
-реки и ледняки скульптурировали landscape
-
-В результате эрозии различных горных пород, испытавших тектоническое поднятие и сопутствующих этому разломов, появились долины, каньоны, куполовидные складки и другие формы рельефа, которые мы можем наблюдать сегодня (эти сочленения и трещины не двигаются, поэтому нет геологического разлома)
 
 
 
 
-водопады
-водоемы
-ледники
-
-До того, как на этой территории появились первые европейцы, здесь жили индейские племена сьерра-мивок и паюты. Ко времени прихода сюда первых поселенцев, в долине Йосемити обитала группа индейцев, называвшие себя аваничи (Ahwahnechee)
-
-В результате резкого увеличения потока иммигрантов во времена золотой лихорадки стали возникать вооружённые конфликты с местными племенами.
-
-Несколько видных людей, включая Галена Кларка и сенатора Джона Коннесса (англ. John Conness), заинтересовались коммерческим успехом туристического бизнеса и выступили с идеей создания общественного парка на территории долины. 30 июня 1864 года президент США Авраам Линкольн подписал до этого одобренный Конгрессом документ, названный Йосемитским грантом. Долина Йосемити и роща Марипоса были переданы Калифорнии, им был предоставлен статус парка штата, а спустя два года была назначено правление специальных уполномоченных.
-
- Мьюр был одним их первых, кто предположил, что основные ландшафты парка созданы с помощью огромных ледников,
-
-Чрезмерный выпас скота на пастбищах (в основном овец), вырубка деревьев секвойядендрон и другая деятельность в ущерб природе вынудили Джона Мьюра выступить с идеей ужесточения условий охраны этой территории. Мьюр убеждал влиятельных посетителей в необходимости федеральной защиты парка. Одним из таких посетителей стал издатель журнала «Сенчури Мэгезин» Роберт Джонсон (англ. Robert Underwood Johnson). С помощью Джонсона Мьюр помог провести акт Конгресса, который 1 октября 1890 года дал парку статус национального. Несмотря на это, штат Калифорния всё же сохранил контроль над долиной и рощей. Мьюр также убедил местные власти не пасти скот в альпийских лугах.
 
 
  By the end of the Cretaceous Period, about 65 million years
@@ -90,11 +79,12 @@ called themselves the "Ahwahneechee," the people who lived in "Ahwahnee.
 <!--{% include image src="" %}-->
 
 
-В 1984 году парк получил статус «Всемирного наследия» под эгидой ЮНЕСКО. Был с самого начала задуман именно как национальный парк (хотя национальные парки существовали и ранее). Среди его организаторов — один из первых защитников идеи заповедников Джон Мьюр (англ. John Muir). Каждый год парк посещают 4—5 миллионов человек; большинство останавливается только в долине Йосемите.
+
 
 
 Yosemite is internationally recognized for its granite cliffs, waterfalls, clear streams, giant sequoia groves, lakes, mountains, glaciers, and biological diversity.[7] Almost 95% of the park is designated wilderness.[8]
-On average, about 4 million people visit Yosemite each year,[3] and most spend the majority of their time in the 5.9 square miles (15 km2) of Yosemite Valley.[7] The park set a visitation record in 2016, surpassing 5 million visitors for the first time in its history.[9]
+
+
 Yosemite was central to the development of the national park idea. First, Galen Clark and others lobbied to protect Yosemite Valley from development, ultimately leading to President Abraham Lincoln's signing the Yosemite Grant in 1864. Later, John Muir led a successful movement to establish a larger national park encompassing not just the valley, but surrounding mountains and forests as well—paving the way for the U.S. National Park system.[10]
 Yosemite is one of the largest and least fragmented habitat blocks in the Sierra Nevada, and the park supports a diversity of plants and animals. The park has an elevation range from 2,127 to 13,114 feet (648 to 3,997 m) and contains five major vegetation zones: chaparral/oak woodland, lower montane forest, upper montane forest, subalpine zone, and alpine. Of California's 7,000 plant species, about 50% occur in the Sierra Nevada and more than 20% within Yosemite. There is suitable habitat for more than 160 rare plants in the park, with rare local geologic formations and unique soils characterizing the restricted ranges many of these plants occupy.[7]
 
