--- a/_posts/stories/2017-11-08-yosemite.markdown
+++ b/_posts/stories/2017-11-08-yosemite.markdown
@@ -31,9 +31,9 @@ images:
 
 На следующее утро мы постарались выехать рано. На въезде в парк (Arch Rock Entrance) нас все-равно ждала очередь. Двигалась она довольно быстро, но лишний раз напомнила как американцы любят "пешеходный туризм".
 
-Выше я упоминала невероятные размеры Национального парка. Однако, Долина Йосемите занимает только один процент от общей территории всего Йосемите. Но именно туда стекается большинство посетителей. И мы оказались в их числе.
+Выше я упоминала невероятные размеры Национального парка. Долина Йосемите занимает только один процент от общей территории всего Йосемите, однако, именно туда стекается большинство посетителей. И мы оказались в их числе.
 
-На этом одном проценте территории расположилось такое количество гор, водопадов и водоемов, что и их нам хватило на два дня с запасом.
+На этом одном проценте территории расположилось такое количество гор, водопадов и водоемов, что и за два дня их не посмотреть.
 
 Если немного углубиться в историю, то считается, что первые живые существа появились здесь около 3000 лет назад. А первые люди - от 8000 до 10000 лет назад.
 До того, как на этой территории появились первые европейцы, здесь жили индейские племена сьерра-мивок и паюты. Ко времени прихода сюда первых поселенцев, в долине Йосемити обитала группа индейцев, называвшая себя аваничи (Ahwahnechee)
@@ -42,7 +42,19 @@ images:
 
 Считается, что в результате эрозии различных горных пород, испытавших тектоническое поднятие и сопутствующих этому разломов, и появились долины, каньоны, куполовидные складки и другие формы рельефа Yosemite.
 
-Оказавшись в парке в начале десятого, мы поехали по Southside Dr. и практически сразу видели гору El Capitan.
+Оказавшись в парке в начале десятого, мы поехали по Southside Dr. и практически сразу увидели величественную гору El Capitan.
+
+
+
+
+Советы путешественникам:
+* позаботьтесь об офлайн картах заранее
+* приезжайте в парк как можно раньше (9-10 утра - это уже поздно). C парковкой у Yosemite Falls, Glacier point и Visitor Center в такое время уже могут быть проблемы.
+* удобная и несколькая обувь обязательна! если есть проблемы с коленями, то лучше взять с собой наколенники, спуски с гор могут быть очень резким и и длинными. Берегите ноги!
+* здесь сильно прохладнее, чем в Сан Франциско. Если днем на солнце и будет очень жарко, то к вечеру вы почувствуете настоящий холод. Берите побольше одежды с собой.
+* еда! в Visitor Center есть кафешка, в которой можно покушать. Но вы не захотите быть к ней привязаны, поэтому для свободы передвижения - берите побольше еды с собой. Ну и побольше снэков. Они спасают!
+* если планируете посетить больше 2 национальных парков за год - берите годовой абонемент
+
 
 
 
